# pipg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: run_tests.sh  unit_tests.yml
extras/: pipg.jl
include/: Timer.cpp  constraint.hpp  pipg.hpp  projection.hpp  utilities.hpp
src/: pipg.cpp  test.cpp
tests/: catch.hpp  run_tests.cpp  test_1D_mpc.hpp  test_split.hpp
tests/cvxpy_verification/: test_1D_mpc.py  test_split.py
